--- a/CSS/cssassignment14.html
+++ b/CSS/cssassignment14.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Animations</title>
+  <title>Assignment 14</title>
   <link rel="stylesheet" href="css14.css">
 </head>
 <body>
