--- a/CSS/cssassignment16.html
+++ b/CSS/cssassignment16.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Pseudo-Classes and Pseudo-Elements</title>
+  <title>Assignment 16</title>
   <link rel="stylesheet" href="css16.css">
 </head>
 <body>
